--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: ITSL SSD
-Theme URI: 
+Theme URI:
 Author: Itslearning et Catch Themes
 Author URI: http://catchthemes.com/
 Description: Sur la base du template Catch Base. Pour permettre aux administrateurs de gérer et d'adapter leur site de manière la plus autonome possible. Ce template intègre de très nombreuses options directement accessibles à l'administrateur. Ce template utilise HTML5 et CSS3.
@@ -259,8 +259,8 @@ big {
 	font-size: 125%;
 }
 
-#feature-slider .cycle-pager span { 
-    font-size: 45px; 
+#feature-slider .cycle-pager span {
+    font-size: 45px;
 }
 
 .site-title {
@@ -287,7 +287,7 @@ big {
 }
 
 .entry-meta span a:before {
-    font-size: 16px;	
+    font-size: 16px;
 }
 
 #feature-slider .cycle-prev:before,
@@ -312,7 +312,7 @@ big {
 	font-size: 14px;
 }
 
-#nav-below .wp-pagenavi a, 
+#nav-below .wp-pagenavi a,
 #nav-below .wp-pagenavi span,
 .page-links span {
 	font-size: 14px;
@@ -340,11 +340,11 @@ body {
 	background-color: #fff;
 	border-radius:			3px;
 	-moz-border-radius:		3px;
-	-webkit-border-radius:	3px; 
-	-webkit-box-shadow: 	0 2px 6px rgba(100, 100, 100, 0.3);	
-	-moz-box-shadow: 		0 2px 6px rgba(100, 100, 100, 0.3);	
-	box-shadow: 			0 2px 6px rgba(100, 100, 100, 0.3);	
-	width: 1200px;	
+	-webkit-border-radius:	3px;
+	-webkit-box-shadow: 	0 2px 6px rgba(100, 100, 100, 0.3);
+	-moz-box-shadow: 		0 2px 6px rgba(100, 100, 100, 0.3);
+	box-shadow: 			0 2px 6px rgba(100, 100, 100, 0.3);
+	width: 1200px;
 }
 
 a {
@@ -437,7 +437,7 @@ blockquote:before {
 	top: -10px;
 }
 
-.entry-content ol, 
+.entry-content ol,
 .entry-content ul {
     margin-bottom: 20px;
     margin-left: 20px;
@@ -482,7 +482,7 @@ blockquote:before {
 /* Genericons */
 .genericon:before,
 #feature-slider .cycle-prev:before,
-#feature-slider .cycle-next:before, 
+#feature-slider .cycle-next:before,
 .posted-on a:before,
 .byline a:before,
 .cat-links span + a:before,
@@ -499,7 +499,7 @@ blockquote:before {
 }
 
 #search-toggle:before {
-    content: "\f400";	
+    content: "\f400";
 }
 
 #scrollup:before {
@@ -511,19 +511,19 @@ blockquote:before {
 }
 
 #feature-slider .cycle-next:before {
-    content: "\f429";   
+    content: "\f429";
 }
 
 .entry-meta .posted-on a:before {
-	content: "\f307";   
+	content: "\f307";
 }
 
 .entry-meta .author a:before {
-	content: "\f304";   
+	content: "\f304";
 }
 
 .edit-link a:before {
-	content: "\f411";   
+	content: "\f411";
 }
 
 .cat-links span + a:before {
@@ -535,7 +535,7 @@ blockquote:before {
 }
 
 .entry-meta .comments-link a:before {
-	content: "\f300";   
+	content: "\f300";
 }
 
 
@@ -560,7 +560,7 @@ blockquote:before {
 	padding: 0px;
 	background-image: url("./images/headers/header-1200x180.jpg");
 	opacity: 0.8;
-	
+
 }
 
 #site-branding,
@@ -576,6 +576,10 @@ blockquote:before {
 #supplementary .widget,
 #site-generator {
 	padding: 20px;
+}
+
+#site-branding{
+	padding: 60px 0 10px 15px;
 }
 
 .logo-left #site-header {
@@ -669,7 +673,7 @@ blockquote:before {
 }
 
 #search-toggle:before {
-    margin-top: 12px;	
+    margin-top: 12px;
 }
 
 #scrollup:before {
@@ -721,7 +725,7 @@ textarea {
 	max-width: 100%;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing:    border-box;
-	box-sizing:         border-box;	
+	box-sizing:         border-box;
 }
 
 button,
@@ -795,7 +799,7 @@ textarea {
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;	
+	-webkit-border-radius: 3px;
 }
 
 input[type="text"]:focus,
@@ -898,11 +902,11 @@ textarea {
 .sidebar-header-right .widget_nav_menu li:hover > a {
 }
 
-.catchbase-nav-menu .current-menu-item > a, 
+.catchbase-nav-menu .current-menu-item > a,
 .catchbase-nav-menu .current-menu-ancestor > a,
-.catchbase-nav-menu .current_page_item > a, 
+.catchbase-nav-menu .current_page_item > a,
 .catchbase-nav-menu .current_page_ancestor > a,
-.sidebar-header-right .widget_nav_menu .current-menu-item > a, 
+.sidebar-header-right .widget_nav_menu .current-menu-item > a,
 .sidebar-header-right .widget_nav_menu .current-menu-ancestor > a {
 	color: #21759b;
 }
@@ -1004,7 +1008,7 @@ textarea {
 
 #search-toggle:hover {
 	background-color: transparent;
-    color: #000;	
+    color: #000;
 }
 
 #search-container {
@@ -1046,7 +1050,7 @@ textarea {
 	float: right;
 }
 
-#nav-below .wp-pagenavi a, 
+#nav-below .wp-pagenavi a,
 #nav-below .wp-pagenavi span,
 .page-links span {
 	border: none;
@@ -1081,15 +1085,15 @@ textarea {
 	padding: 0;
 }
 
-#nav-below .wp-pagenavi a, 
+#nav-below .wp-pagenavi a,
 #nav-below .wp-pagenavi span {
-	background-color: #f2f2f2;	
+	background-color: #f2f2f2;
 	margin: 0 0 0 10px;
 }
 
 #nav-below .wp-pagenavi span.pages {
 	color: #404040;
-	background-color: transparent; 
+	background-color: transparent;
 	padding: 2px 0 0 0;
 }
 
@@ -1110,10 +1114,10 @@ textarea {
     background-color: #666;
     border-radius: 3px;
 	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px; 
+	-webkit-border-radius: 3px;
     -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
-	-moz-box-shadow: 	0 2px 6px rgba(0, 0, 0, 0.5);	
-	box-shadow: 		0 2px 6px rgba(0, 0, 0, 0.5);	
+	-moz-box-shadow: 	0 2px 6px rgba(0, 0, 0, 0.5);
+	box-shadow: 		0 2px 6px rgba(0, 0, 0, 0.5);
     color: #eee;
     cursor: pointer;
     display: block;
@@ -1124,7 +1128,7 @@ textarea {
 
 #infinite-handle span:hover {
 	background-color: #000;
-    color: #fff;	
+    color: #fff;
     text-decoration: none;
 }
 
@@ -1219,7 +1223,6 @@ textarea {
 #site-header {
 	display: inline-block;
 	float: left;
-
 }
 
 #site-branding,
@@ -1227,9 +1230,14 @@ textarea {
 	max-width: 100%;
 }
 
+
 #site-logo a {
     display: block;
     line-height: 0;
+}
+
+#site-logo img {
+	max-height: 50px;
 }
 
 #site-header.logo-enable.logo-left {
@@ -1285,7 +1293,7 @@ textarea {
 
 #promotion-message .right {
 	float: right;
-	max-width: 220px;	
+	max-width: 220px;
 	text-align: center;
 }
 
@@ -1294,7 +1302,7 @@ textarea {
 	border: 2px solid #eee;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px; 
+	-webkit-border-radius: 5px;
 	color: #666;
 	display: block;
 }
@@ -1315,7 +1323,7 @@ textarea {
 12. Featured Content Area
 --------------------------------------------------------------*/
 #featured-content {
-	border-bottom: 1px solid #eee;	
+	border-bottom: 1px solid #eee;
 }
 
 #featured-content.border-top {
@@ -1467,7 +1475,7 @@ textarea {
     width: 386px;
 }
 
-.three-columns.equal-columns .sidebar-primary, 
+.three-columns.equal-columns .sidebar-primary,
 .three-columns.equal-columns .sidebar-secondary {
     width: 387px;
 }
@@ -1514,7 +1522,7 @@ textarea {
 .has-post-thumbnail.excerpt-landscape-featured-image .featured-image,
 .has-post-thumbnail.excerpt-thumbnail-featured-image .featured-image {
 	display: inline;
-    float: left;	
+    float: left;
 }
 
 .has-post-thumbnail.excerpt-portrait-featured-image .entry-container,
@@ -1888,10 +1896,10 @@ caption {
     background-color: #666;
     border-radius: 3px;
 	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px; 
+	-webkit-border-radius: 3px;
     -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
-	-moz-box-shadow: 	0 2px 6px rgba(0, 0, 0, 0.5);	
-	box-shadow: 		0 2px 6px rgba(0, 0, 0, 0.5);	
+	-moz-box-shadow: 	0 2px 6px rgba(0, 0, 0, 0.5);
+	box-shadow: 		0 2px 6px rgba(0, 0, 0, 0.5);
     color: #eee;
     cursor: pointer;
     display: none;
@@ -1900,14 +1908,14 @@ caption {
     bottom: 20px;
 	right: 20px;
     text-align: center;
-	text-decoration: none; 
+	text-decoration: none;
     width: 40px;
     z-index: 9999;
 }
 
 #scrollup:hover {
 	background-color: #000;
-    color: #fff;	
+    color: #fff;
     text-decoration: none;
 }
 
@@ -1930,7 +1938,7 @@ caption {
 	display: block;
    	float: left;
    	font-style: italic;
-   	margin-left: -1px;   
+   	margin-left: -1px;
 }
 
 #breadcrumb-list span.sep {
@@ -1944,7 +1952,7 @@ caption {
 #breadcrumb-list a span {
 	color: #21759b;
 	display: block;
-	padding: 5px 10px 3px; 
+	padding: 5px 10px 3px;
 }
 
 #breadcrumb-list a:hover,
@@ -1955,7 +1963,7 @@ caption {
 
 #breadcrumb-list .breadcrumb-current {
 	background-color: #f2f2f2;
-	padding: 5px 10px 3px; 
+	padding: 5px 10px 3px;
 }
 
 /* jQuery Cycle 2 Custom CSS */
@@ -1964,11 +1972,11 @@ caption {
     z-index: 101;
 }
 
-#feature-slider .cycle-slideshow { 
-    width: 100%; 
-    max-width: 1200px; 
-    margin: 0 auto; 
-    padding: 0; 
+#feature-slider .cycle-slideshow {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0;
     position: relative;
 }
 
@@ -1977,31 +1985,31 @@ caption {
     margin: 0 auto;
 }
 
-#feature-slider .cycle-pager { 
-    text-align: center; 
-    width: 100%; 
-    z-index: 101; 
-    position: absolute; 
-    bottom: 0; 
+#feature-slider .cycle-pager {
+    text-align: center;
+    width: 100%;
+    z-index: 101;
+    position: absolute;
+    bottom: 0;
     overflow: hidden;
 }
 
-#feature-slider .cycle-pager span { 
-    font-family: arial; 
+#feature-slider .cycle-pager span {
+    font-family: arial;
     line-height: 20px;
-    width: 14px; 
-    height: 20px; 
-    display: inline-block; 
-    color: #f2f2f2; 
-    cursor: pointer; 
+    width: 14px;
+    height: 20px;
+    display: inline-block;
+    color: #f2f2f2;
+    cursor: pointer;
     margin: 0 2px;
 }
 
-#feature-slider .cycle-pager span.cycle-pager-active { 
+#feature-slider .cycle-pager span.cycle-pager-active {
     color: #000;
 }
 
-#feature-slider .cycle-pager > * { 
+#feature-slider .cycle-pager > * {
     cursor: pointer;
 }
 
@@ -2010,10 +2018,10 @@ caption {
     display: block;
     text-align: center;
     width: 40px;
-    height: 40px;   
+    height: 40px;
 }
 
-#feature-slider .cycle-prev, 
+#feature-slider .cycle-prev,
 #feature-slider .cycle-next {
     background-color: #000;
     -moz-border-radius:     4px;
@@ -2023,14 +2031,14 @@ caption {
     cursor: pointer;
     display: block;
     opacity: 0;
-    filter: alpha(opacity=0); 
+    filter: alpha(opacity=0);
     position: absolute;
     top: 50%;
-    text-decoration: none; 
-    -moz-transition:    all 0.2s ease-in-out; 
-    -webkit-transition: all 0.2s ease-in-out; 
-    transition:         all 0.2s ease-in-out;  
-    z-index: 101;    
+    text-decoration: none;
+    -moz-transition:    all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition:         all 0.2s ease-in-out;
+    z-index: 101;
 }
 
 #feature-slider .cycle-prev {
@@ -2041,30 +2049,30 @@ caption {
     right: -20px;
 }
 
-#feature-slider:hover .cycle-prev { 
-    left: 40px; 
-    opacity: 1; 
+#feature-slider:hover .cycle-prev {
+    left: 40px;
+    opacity: 1;
     filter: alpha(opacity=100);
 }
 
-#feature-slider:hover .cycle-next { 
-    right: 40px; 
-    opacity: 1; 
+#feature-slider:hover .cycle-next {
+    right: 40px;
+    opacity: 1;
     filter: alpha(opacity=100);
 }
 
-#feature-slider .cycle-slideshow .hentry { 
-    position: absolute; 
-    top: 0; 
+#feature-slider .cycle-slideshow .hentry {
+    position: absolute;
+    top: 0;
     left: 0;
-    width: 100%; 
+    width: 100%;
     margin: 0;
-    padding: 0; 
+    padding: 0;
     display: block;
 }
 
 #feature-slider .cycle-slideshow article:first-child {
-    position: static; 
+    position: static;
     z-index: 100;
 }
 
@@ -2083,10 +2091,10 @@ caption {
     background-color: #000;
     -moz-border-radius:     4px;
     -webkit-border-radius:  4px;
-    border-radius:          4px; 
-    -moz-transition:    all 0.2s ease-in-out; 
-    -webkit-transition: all 0.2s ease-in-out; 
-    transition:         all 0.2s ease-in-out;      
+    border-radius:          4px;
+    -moz-transition:    all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition:         all 0.2s ease-in-out;
 }
 
 #feature-slider .entry-title,
@@ -2102,9 +2110,9 @@ caption {
     margin-bottom: 0;
 }
 
-.disabled { 
-    opacity: .5; 
-    filter:alpha(opacity=50); 
+.disabled {
+    opacity: .5;
+    filter:alpha(opacity=50);
 }
 
 /* Social Icons */
@@ -2118,7 +2126,7 @@ caption {
 	border-radius: 3px;
 	-moz-border-radius:	3px;
 	box-sizing: content-box;
-	-webkit-border-radius:	3px; 
+	-webkit-border-radius:	3px;
     -webkit-box-sizing: content-box; /* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */
 	-moz-box-sizing:    content-box;
 	color: #404040;
@@ -2135,137 +2143,137 @@ caption {
 
 .site .widget_catchbase_social_icons a.genericon-facebook-alt:hover {
 	background-color: #3b5998;
-	border-color: #3b5998;	
+	border-color: #3b5998;
 }
 
 .site .widget_catchbase_social_icons a.genericon-twitter:hover {
 	background-color: #00aced;
-	border-color: #00aced;	
+	border-color: #00aced;
 }
 
 .site .widget_catchbase_social_icons a.genericon-googleplus-alt:hover {
 	background-color: #dd4b39;
-	border-color: #dd4b39;	
+	border-color: #dd4b39;
 }
 
 .site .widget_catchbase_social_icons a.genericon-mail:hover {
 	background-color: #1d62f0;
-	border-color: #1d62f0;	
+	border-color: #1d62f0;
 }
 
 .site .widget_catchbase_social_icons a.genericon-feed:hover {
 	background-color: #dc622c;
-	border-color: #dc622c;	
+	border-color: #dc622c;
 }
 
 .site .widget_catchbase_social_icons a.genericon-wordpress:hover {
 	background-color: #21759b;
-	border-color: #21759b;	
+	border-color: #21759b;
 }
 
 .site .widget_catchbase_social_icons a.genericon-github:hover {
 	background-color: #4183c4;
-	border-color: #4183c4;	
+	border-color: #4183c4;
 }
 
 .site .widget_catchbase_social_icons a.genericon-linkedin:hover {
 	background-color: #007bb6;
-	border-color: #007bb6;	
+	border-color: #007bb6;
 }
 
 .site .widget_catchbase_social_icons a.genericon-pinterest:hover {
 	background-color: #cb2027;
-	border-color: #cb2027;	
+	border-color: #cb2027;
 }
 
 .site .widget_catchbase_social_icons a.genericon-flickr:hover {
 	background-color: #ff0084;
-	border-color: #ff0084;	
+	border-color: #ff0084;
 }
 
 .site .widget_catchbase_social_icons a.genericon-vimeo:hover {
 	background-color: #aad450;
-	border-color: #aad450;	
+	border-color: #aad450;
 }
 
 .site .widget_catchbase_social_icons a.genericon-youtube:hover {
 	background-color: #bb0000;
-	border-color: #bb0000;	
+	border-color: #bb0000;
 }
 
 .site .widget_catchbase_social_icons a.genericon-tumblr:hover {
 	background-color: #32506d;
-	border-color: #32506d;	
+	border-color: #32506d;
 }
 
 .site .widget_catchbase_social_icons a.genericon-instagram:hover {
 	background-color: #517fa4;
-	border-color: #517fa4;	
+	border-color: #517fa4;
 }
 
 .site .widget_catchbase_social_icons a.genericon-codepen:hover {
 	background-color: #000;
-	border-color: #000;	
+	border-color: #000;
 }
 
 .site .widget_catchbase_social_icons a.genericon-path:hover {
 	background-color: #ff442c;
-	border-color: #ff442c;	
+	border-color: #ff442c;
 }
 
 .site .widget_catchbase_social_icons a.genericon-dribbble:hover {
 	background-color: #ea4c89;
-	border-color: #ea4c89;	
+	border-color: #ea4c89;
 }
 
 .site .widget_catchbase_social_icons a.genericon-skype:hover {
 	background-color: #12a5f4;
-	border-color: #12a5f4;	
+	border-color: #12a5f4;
 }
 
 .site .widget_catchbase_social_icons a.genericon-digg:hover {
 	background-color: #333;
-	border-color: #333;	
+	border-color: #333;
 }
 
 .site .widget_catchbase_social_icons a.genericon-reddit:hover {
 	background-color: #ff4500;
-	border-color: #ff4500;	
+	border-color: #ff4500;
 }
 
 .site .widget_catchbase_social_icons a.genericon-stumbleupon:hover {
 	background-color: #eb4924;
-	border-color: #eb4924;	
+	border-color: #eb4924;
 }
 
 .site .widget_catchbase_social_icons a.genericon-pocket:hover {
 	background-color: #f13753;
-	border-color: #f13753;	
+	border-color: #f13753;
 }
 
 .site .widget_catchbase_social_icons a.genericon-dropbox:hover {
 	background-color: #2281cf;
-	border-color: #2281cf;	
+	border-color: #2281cf;
 }
 
 .site .widget_catchbase_social_icons a.genericon-spotify:hover {
 	background-color: #81b900;
-	border-color: #73a500;	
+	border-color: #73a500;
 }
 
 .site .widget_catchbase_social_icons a.genericon-polldaddy:hover {
 	background-color: #bc0b0b;
-	border-color: #bc0b0b;	
+	border-color: #bc0b0b;
 }
 
 .site .widget_catchbase_social_icons a.genericon-foursquare:hover {
 	background-color: #f94877;
-	border-color: #f94877;	
+	border-color: #f94877;
 }
 
 .site .widget_catchbase_social_icons a.genericon-twitch:hover {
 	background-color: #6441a5;
-	border-color: #6441a5;	
+	border-color: #6441a5;
 }
 
 .site .widget_catchbase_social_icons a.custom-icon {
@@ -2281,7 +2289,7 @@ a.genericon-cog {
 	border-radius: 3px;
 	-moz-border-radius:	3px;
 	box-sizing: content-box;
-	-webkit-border-radius:	3px; 
+	-webkit-border-radius:	3px;
     -webkit-box-sizing: content-box; /* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */
 	-moz-box-sizing:    content-box;
 	color: #404040;
@@ -2306,5 +2314,5 @@ a.genericon-cog:hover {
 	border-color: #21759b;
 	text-decoration: none;
 	font-family: sans-serif;
-	color: white;	
+	color: white;
 }
